--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,9 @@
 {
     "env": {
-        "es6": true,
         "node": true
     },
     "extends": "eslint:recommended",
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 7,
         "sourceType": "module"
@@ -11,7 +11,9 @@
     "rules": {
         "indent": [
             "error",
-            2
+            2, {
+              "SwitchCase": 1
+            }
         ],
         "linebreak-style": [
             "error",
