--- a/.envrc.sample
+++ b/.envrc.sample
@@ -5,3 +5,6 @@
 export PATH=$(npm bin):$PATH
 export ENV=development
 export NODE_ENV=${ENV}
+
+export AUTH0_CLIENT_SECRET=
+export AUTH0_CLIENT_ID=
