--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "author": "Michelle D Zhang <zhang.michelle.d@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "config": "^1.25.1",
     "koa": "^2.2.0",
+    "koa-jwt": "^3.0.1",
     "koa-morgan": "^1.0.1",
     "koa-router": "^7.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
-    "eslint": "^3.17.1"
+    "eslint": "^3.17.1",
+    "jsonwebtoken": "^7.3.0"
   },
   "scripts": {
     "start": "node src/index.js"
