--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "config": "^1.25.1",
+    "jsonwebtoken": "^7.3.0",
     "koa": "^2.2.0",
     "koa-jwt": "^3.0.1",
     "koa-morgan": "^1.0.1",
@@ -14,9 +15,12 @@
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "eslint": "^3.17.1",
-    "jsonwebtoken": "^7.3.0"
+    "expect.js": "^0.3.1",
+    "mocha": "^3.2.0",
+    "supertest": "^3.0.0"
   },
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "mocha */**/*.test.js"
   }
 }
